--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,5 @@
+Originally developed by:
 Rick Olson:    https://github.com/technoweenie
 Corey Donohoe: https://github.com/atmos
+Modified by:
+Paul Sohier:   http://github.com/paul999
